# nexoia-sdk

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
ai_models/: deepseek.py  openia.py
nexoia/: config.py  exceptions.py  patcher.py  registry.py  types.py
nexoia/ai_models/: __init__.py  base_model.py
nexoia/clients/: base.py  claude_client.py  deepseek_client.py  gemini_client.py  openai_client.py
nexoia/compat/: __init__.py  claude.py  deepseek.py  gemini.py  openai.py
tests/: test_claude_client.py  test_compat_claude.py  test_config.py  test_deepseek_client.py  test_exception.py  test_gemini_client.py  test_openai_client.py  test_patcher.py  test_registry.py  test_types.py
